<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/refresh" />

    <LinearLayout
        android:id="@+id/lin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/sale_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sale_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/weight_kg"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sale_unit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unitprice"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/sale_sum_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_price"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/sale_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sold_time"
            android:textSize="16sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/tag_red_bg" />

    <ListView
        android:id="@+id/lv_plu_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/tag_red_bg"
        android:dividerHeight="1dp" />

</LinearLayout>
