<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/refresh"
        android:layout_weight="1"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_weight="4"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/plu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/plu_llfcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/llfcode"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/plu_hotkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hotKey"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/plu_unit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unitprice"
            android:textSize="16sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/plu_WeightUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/WeightUnit"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/plu_ShelfDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shelflife"
            android:textSize="16sp"
            android:visibility="visible" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/tag_blue_bg" />

    <ListView
        android:id="@+id/lv_plu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/tag_red_bg"
        android:dividerHeight="1dp" />

</LinearLayout>
